--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,21 +1,201 @@
-<div class="clip-wrapper">
-	<div class="clip-inner">
-		<h1>Test Title</h1>
-		<img src="/assets/thumbnails/koreantest1.jpg" />
-		<p>
-			this is a test example of a description.
-			the huskers are losing of course.
-			their defense is terrible.
-		</p>
-		<div class="icon-holder">
-			<div class="left-holder">
-				<img src="/assets/cat-icons/intermediate-small.png"/>
+<div class="col" id="col1">
+	<div class="clip-wrapper">
+		<div class="clip-inner">
+			<h1>Test Title</h1>
+			<img src="/assets/thumbnails/koreantest1.jpg" />
+			<p>
+				this is a test example of a description.
+				the huskers are losing of course.
+				their defense is terrible.
+			</p>
+			<div class="icon-holder">
+				<div class="left-holder">
+					<img src="/assets/cat-icons/intermediate-small.png"/>
+				</div>
+				<div class="right-holder">
+					<img src="/assets/cat-icons/bus-small.png"/>
+					<img src="/assets/cat-icons/heart-small.png"/>
+				</div>
+				<div class="clearme"></div>
 			</div>
-			<div class="right-holder">
-				<img src="/assets/cat-icons/bus-small.png"/>
-				<img src="/assets/cat-icons/heart-small.png"/>
+		</div>
+	</div>
+	<div class="clip-wrapper">
+		<div class="clip-inner">
+			<h1>Test Title</h1>
+			<img src="/assets/thumbnails/koreantest3.jpg" />
+			<p>
+				this is a test example of a description.
+				the huskers are losing of course.
+				their defense is terrible.
+				this is a test example of a description.
+				the huskers are losing of course.
+				their defense is terrible.
+			</p>
+			<div class="icon-holder">
+				<div class="left-holder">
+					<img src="/assets/cat-icons/intermediate-small.png"/>
+				</div>
+				<div class="right-holder">
+					<img src="/assets/cat-icons/bus-small.png"/>
+					<img src="/assets/cat-icons/heart-small.png"/>
+				</div>
+				<div class="clearme"></div>
 			</div>
-			<div class="clearme"></div>
+		</div>
+	</div>
+	<div class="clip-wrapper">
+		<div class="clip-inner">
+			<h1>Test Title</h1>
+			<img src="/assets/thumbnails/koreantest4.jpg" />
+			<p>
+				this is a test example of a description.
+				the huskers are losing of course.
+				their defense is terrible.
+			</p>
+			<div class="icon-holder">
+				<div class="left-holder">
+					<img src="/assets/cat-icons/intermediate-small.png"/>
+				</div>
+				<div class="right-holder">
+					<img src="/assets/cat-icons/bus-small.png"/>
+					<img src="/assets/cat-icons/heart-small.png"/>
+				</div>
+				<div class="clearme"></div>
+			</div>
 		</div>
 	</div>
 </div>
+<div class="col" id="col2">
+	<div class="clip-wrapper">
+		<div class="clip-inner">
+			<h1>Test Title</h1>
+			<img src="/assets/thumbnails/koreantest2.jpg" />
+			<p>
+				this is a test example of a description.
+				the huskers are losing of course.
+				their defense is terrible.this is a test example of a description.
+				the huskers are losing of course.
+				their defense is terrible.
+			</p>
+			<div class="icon-holder">
+				<div class="left-holder">
+					<img src="/assets/cat-icons/intermediate-small.png"/>
+				</div>
+				<div class="right-holder">
+					<img src="/assets/cat-icons/bus-small.png"/>
+					<img src="/assets/cat-icons/heart-small.png"/>
+				</div>
+				<div class="clearme"></div>
+			</div>
+		</div>
+	</div>
+	<div class="clip-wrapper">
+		<div class="clip-inner">
+			<h1>Test Title</h1>
+			<img src="/assets/thumbnails/koreantest4.jpg" />
+			<p>
+				this is a test example of a description.
+				the huskers are losing of course.
+				their defense is terrible.
+			</p>
+			<div class="icon-holder">
+				<div class="left-holder">
+					<img src="/assets/cat-icons/intermediate-small.png"/>
+				</div>
+				<div class="right-holder">
+					<img src="/assets/cat-icons/bus-small.png"/>
+					<img src="/assets/cat-icons/heart-small.png"/>
+				</div>
+				<div class="clearme"></div>
+			</div>
+		</div>
+	</div>
+	<div class="clip-wrapper">
+		<div class="clip-inner">
+			<h1>Test Title</h1>
+			<img src="/assets/thumbnails/koreantest1.jpg" />
+			<p>
+				this is a test example of a description.
+				the huskers are losing of course.
+				their defense is terrible.
+			</p>
+			<div class="icon-holder">
+				<div class="left-holder">
+					<img src="/assets/cat-icons/intermediate-small.png"/>
+				</div>
+				<div class="right-holder">
+					<img src="/assets/cat-icons/bus-small.png"/>
+					<img src="/assets/cat-icons/heart-small.png"/>
+				</div>
+				<div class="clearme"></div>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="col" id="col3">
+	<div class="clip-wrapper">
+		<div class="clip-inner">
+			<h1>Test Title</h1>
+			<img src="/assets/thumbnails/koreantest3.jpg" />
+			<p>
+				this is a test example of a description.
+			</p>
+			<div class="icon-holder">
+				<div class="left-holder">
+					<img src="/assets/cat-icons/intermediate-small.png"/>
+				</div>
+				<div class="right-holder">
+					<img src="/assets/cat-icons/bus-small.png"/>
+					<img src="/assets/cat-icons/heart-small.png"/>
+				</div>
+				<div class="clearme"></div>
+			</div>
+		</div>
+	</div>
+	<div class="clip-wrapper">
+		<div class="clip-inner">
+			<h1>Test Title</h1>
+			<img src="/assets/thumbnails/koreantest1.jpg" />
+			<p>
+				this is a test example of a description.
+				the huskers are losing of course.
+				their defense is terrible.this is a test example of a description.
+				the huskers are losing of course.
+				their defense is terrible.
+			</p>
+			<div class="icon-holder">
+				<div class="left-holder">
+					<img src="/assets/cat-icons/intermediate-small.png"/>
+				</div>
+				<div class="right-holder">
+					<img src="/assets/cat-icons/bus-small.png"/>
+					<img src="/assets/cat-icons/heart-small.png"/>
+				</div>
+				<div class="clearme"></div>
+			</div>
+		</div>
+	</div>
+	<div class="clip-wrapper">
+		<div class="clip-inner">
+			<h1>Test Title</h1>
+			<img src="/assets/thumbnails/koreantest4.jpg" />
+			<p>
+				this is a test example of a description.
+				the huskers are losing of course.
+				their defense is terrible.
+			</p>
+			<div class="icon-holder">
+				<div class="left-holder">
+					<img src="/assets/cat-icons/intermediate-small.png"/>
+				</div>
+				<div class="right-holder">
+					<img src="/assets/cat-icons/bus-small.png"/>
+					<img src="/assets/cat-icons/heart-small.png"/>
+				</div>
+				<div class="clearme"></div>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="clearme"></div>
