--- a/app/views/layouts/_cats.html.erb
+++ b/app/views/layouts/_cats.html.erb
@@ -1,5 +1,5 @@
 <div class="go-left">
-	<ul class="cat-holder-hor">
+	<ul class="cat-holder-hor cats">
 		<li><img src="/assets/cat-icons/speech-y.png" /></li>
 		<li><img src="/assets/cat-icons/phone-y.png" /></li>
 		<li><img src="/assets/cat-icons/burger-y.png" /></li>
