--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,30 @@
 <div class="col" id="col1">
+	<% @clips.each do |clip| %>
+		<div class="clip-wrapper">
+			<div class="clip-inner">
+				<div id="ytplayer">
+					<%= clip.vid_url_path %>
+				</div>
+				<h1><%= clip.title %></h1>
+				<img src="/assets/thumbnails/koreantest1.jpg" />
+				<p>
+					<%= clip.description %>
+				</p>
+				<div class="icon-holder">
+					<div class="left-holder">
+						<%= clip.level %>
+						<img src="/assets/cat-icons/intermediate-small.png"/>
+					</div>
+					<div class="right-holder">
+						<img src="/assets/cat-icons/bus-small.png"/>
+						<img src="/assets/cat-icons/heart-small.png"/>
+					</div>
+					<div class="clearme"></div>
+				</div>
+			</div>
+		</div>
+	<% end %>
+	<!--
 	<div class="clip-wrapper">
 		<div class="clip-inner">
 			<h1>Test Title</h1>
@@ -20,6 +46,7 @@
 			</div>
 		</div>
 	</div>
+	-->
 	<div class="clip-wrapper">
 		<div class="clip-inner">
 			<h1>Test Title</h1>
