--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,1 @@
-<div class="wrapper bg-vert header-banner">
-	<div class="inner-wrapper">
-	<h1>BAKPAGI</h1>
-	</div>
-</div>
+<div class="header-banner"></div>
