--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -6,7 +6,7 @@ $enhanceColor: #fff;
 $primaryColor: #80BCA3;
 $secColor: #888;//#BF4D28;
 $thirdColor: #F6F7BD;
-$darkColor: #655643;
+$darkColor: #E6AC27;//#655643 //brown;
 $mainWidth: 1200px;
 $catHeight: 528px; //(height of each li + 24 padding) * the number of li categories
 $difLevelHeight: 92px; //$catHeight / 3 - (12 padding per item)
@@ -28,20 +28,10 @@ div.wrapper{
 }
 
 div.header-banner{
-	border-bottom: 2px solid $thirdColor;
-	background-color: #bf4d28;
-	box-shadow: 2px 2px 3px #666;
-	margin-bottom: 18px;
-
-	div.inner-wrapper{
-		padding: 12px 0px;
-
-		h1{
-			font-size: 26px;
-			font-weight: bold;
-			color: #E6AC27;
-		}
-	}
+	height: 8px;
+	background-color: #BF4D28;
+	position: relative;
+	z-index: 2;
 }
 
 div.content{
@@ -72,6 +62,10 @@ div.content{
 			div.clip-inner{
 				width: 190px;
 				text-align: center;
+
+				#ytplayer{
+					display: none;
+				}
 
 				h1{
 					color: $secColor;
@@ -285,10 +279,10 @@ div.modal-inner{
 	position: absolute;
 	left: 50%;
 	top: 50%;
-	margin-top: -200px;
-	margin-left: -400px;
-	width: 800px;
-	height: 400px;
+	margin-top: -240px;
+	margin-left: -426px;
+	width: 853px;
+	height: 480px;
 	background-color: white;
 	z-index: 100;
 }
