--- a/app/views/layouts/_modal.html.erb
+++ b/app/views/layouts/_modal.html.erb
@@ -1,2 +1,4 @@
 <div class="modal"></div>
-<div class="modal-inner"></div>
+<div class="modal-inner">
+	<iframe id="ytplayer" width="853" height="480" src="" frameborder="0" allowfullscreen></iframe>
+</div>
