--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<!-- <%= render "layouts/header" %> -->
+<%= render "layouts/header" %>
 <%= render "layouts/modal" %>
 <div class="wrapper">
 	<div class="right-bg"></div>
