--- a/app/views/layouts/_leftsec.html.erb
+++ b/app/views/layouts/_leftsec.html.erb
@@ -1,6 +1,12 @@
 <div class="go-left">
 	<ul class="cat-holder-hor levels">
-		<li><img src="/assets/cat-icons/easy-med-g.png" /></li>
+		<li>
+			<%= link_to 'Link', {:controller => :home, :action => :index}, :params => {:uLevel => 2} %>
+			<p>
+				<%= params[:uLevel] %>
+			</p>
+			<img src="/assets/cat-icons/easy-med-g.png" />
+		</li>
 		<li class="active"><img src="/assets/cat-icons/intermediate-med-y.png" /></li>
 		<li><img src="/assets/cat-icons/hard-med-g.png" /></li>
 	</ul>
