--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,11 @@
 	</div>
 	<div class="right-col">
 		<div class="content">
-			<%= yield %>
+		<!--	<%= yield %>    -->
+		<div class="col" id="col1">
+			<%= render @clips %>
+		</div>
+		<div class="clearme"></div>
 		</div>
 	</div>
 	<div class="clearme"></div>
