--- a/app/views/layouts/_leftsec.html.erb
+++ b/app/views/layouts/_leftsec.html.erb
@@ -1,13 +1,13 @@
 <div class="go-left">
 	<ul class="cat-holder-hor levels">
 		<li>
-			<%= link_to 'Link', {:controller => :home, :action => :index}, :params => {:uLevel => 2} %>
-			<p>
-				<%= params[:uLevel] %>
-			</p>
-			<img src="/assets/cat-icons/easy-med-g.png" />
+			<%= link_to image_tag('/assets/cat-icons/easy-med-g.png'), :action => :index, :remote => true, :uLevel => 1 %>
 		</li>
-		<li class="active"><img src="/assets/cat-icons/intermediate-med-y.png" /></li>
-		<li><img src="/assets/cat-icons/hard-med-g.png" /></li>
+		<li class="active">
+			<%= link_to image_tag('/assets/cat-icons/intermediate-med-y.png'), :action => :index, :remote => true, :uLevel => 2 %>
+		</li>
+		<li>
+			<%= link_to image_tag('/assets/cat-icons/hard-med-g.png'), :action => :index, :remote => true, :uLevel => 3 %>
+		</li>
 	</ul>
 </div>
