--- a/app/views/layouts/_leftsec.html.erb
+++ b/app/views/layouts/_leftsec.html.erb
@@ -1,13 +1,13 @@
 <div class="go-left">
 	<ul class="cat-holder-hor levels">
 		<li class="active">
-			<%= link_to image_tag('/assets/cat-icons/easy-med-y.png'), :action => :index, :remote => true, :uLevel => 1 %>
+			<%= link_to image_tag('/assets/cat-icons/easy-med-y.png'), :action => :refresh_clips, :remote => true, :uLevel => 1 %>
 		</li>
 		<li>
-			<%= link_to image_tag('/assets/cat-icons/intermediate-med-g.png'), :action => :index, :remote => true, :uLevel => 2 %>
+			<%= link_to image_tag('/assets/cat-icons/intermediate-med-g.png'), :action => :refresh_clips, :remote => true, :uLevel => 2 %>
 		</li>
 		<li>
-			<%= link_to image_tag('/assets/cat-icons/hard-med-g.png'), :action => :index, :remote => true, :uLevel => 3 %>
+			<%= link_to image_tag('/assets/cat-icons/hard-med-g.png'), :action => :refresh_clips, :remote => true, :uLevel => 3 %>
 		</li>
 	</ul>
 </div>
