--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,9 @@
 			<div class="clear-me"></div>
 		</div>
 		<%= render "layouts/leftsec" %>
-		<%= render "layouts/cats" %>
+		<div id="cat-wrapper" class="go-left">
+			<%= render "layouts/cats" %>
+		</div>
 		<div class="clearme"></div>
 	</div>
 	<div class="right-col">
