--- a/app/views/home/refresh_clips.js.erb
+++ b/app/views/home/refresh_clips.js.erb
@@ -1,1 +1,2 @@
 $("#col1").html("<%= escape_javascript render(@clips) %>");
+$("#cat-wrapper").html("<%= escape_javascript render 'layouts/cats' %>");
