--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,12 +27,11 @@
 		<div class="clearme"></div>
 	</div>
 	<div class="right-col">
-		<div class="content">  
-		<div class="col" id="col1">
-			<%= render @clips %>  	
-		<!--	<%= yield %>  -->
-		</div>
-		<div class="clearme"></div>
+		<div class="content">
+
+			<%= render 'layouts/cols' %>
+
+			<div class="clearme"></div>
 		</div>
 	</div>
 	<div class="clearme"></div>
@@ -52,3 +51,4 @@
 
 </body>
 </html>
+
