--- a/app/views/home/refresh_clips.js.erb
+++ b/app/views/home/refresh_clips.js.erb
@@ -1,4 +1,5 @@
 $("div.content").html("<%= escape_javascript render('layouts/cols') %>" + "<div class='clearme'></div>");
+addClipPlayVideoListener();
 
 $("ul.levels li a").each(function(){
 	console.log("boop");
