--- a/app/views/layouts/_cats.html.erb
+++ b/app/views/layouts/_cats.html.erb
@@ -19,4 +19,5 @@
 			<%= link_to image_tag('/assets/cat-icons/speech-y.png'), :action => :refresh_clips, :remote => true, :uCat => 6, :uLevel => @uLevel %>
 		</li>
 	</ul>
+	<div class="shadow-box"></div>
 </div>
