--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,1 +1,5 @@
-<div class="header-banner"></div>
+<div class="header-banner">
+	<div class="inner-wrapper">
+		<img id='logo' src="/assets/logo-meh.png"/>
+	</div>
+</div>
