--- a/app/views/clips/_clip.js.erb
+++ b/app/views/clips/_clip.js.erb
@@ -4,7 +4,7 @@
 			<%= clip.vid_url_path %>
 		</div>
 		<h1><%= clip.title %></h1>
-		<img src="/assets/thumbnails/koreantest1.jpg" />
+		<%= image_tag("http://i1.ytimg.com/vi/" + clip.vid_url_path.split("/").last + "/default.jpg") %>
 		<p>
 			<%= clip.description %>
 		</p>
