--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -51,6 +51,7 @@ div.content{
 
 	.col:first-child{
 		padding-left: 46px;
+		border-left: 1px solid transparent;
 	}
 
 	div.col{
@@ -58,22 +59,26 @@ div.content{
 		min-height: 700px;
 		text-align: center;
 		float: left;
+		border-left: 1px dotted #e6e6e7;
 
 		div.clip-wrapper{
 			//border: 4px solid $primaryColor;
-			border-radius: 4px;
+			// border-radius: 4px;
 			display: inline-block;
 			//box-shadow: -2px 2px 3px #888;
-			border-left: 2px solid #ececec;
-			border-bottom: 2px solid #ececec;
-			border-top: 2px solid #fafafa;
-			border-right: 2px solid #fafafa;
-			margin-bottom: 54px;
+			// border-left: 2px solid #ececec;
+			// border-bottom: 2px solid #ececec;
+			// border-top: 2px solid #fafafa;
+			// border-right: 2px solid #fafafa;
+			// margin-bottom: 54px;
 			background-color: #fff;
+			border-bottom: 1px solid #f5f5f5;
+			padding: 0px 16px;
 
 			div.clip-inner{
-				width: 190px;
+				width: 196px;
 				text-align: center;
+				margin: 10px 0px;
 
 				#ytplayer{
 					display: none;
@@ -127,10 +132,10 @@ div.content{
 
 		div.clip-wrapper:hover{
 			cursor: pointer;
-			//background-color: $thirdColor;
-			border-left: 2px solid #fafafa;
-			border-bottom: 2px solid #fafafa;
-			box-shadow: 2px 2px 3px #bbb;
+			background-color: $thirdColor;
+			// border-left: 2px solid #fafafa;
+			// border-bottom: 2px solid #fafafa;
+			// box-shadow: 2px 2px 3px #bbb;
 		}
 	}
 }
