--- a/app/views/layouts/_cats.html.erb
+++ b/app/views/layouts/_cats.html.erb
@@ -1,10 +1,10 @@
 <div class="go-left">
 	<ul class="cat-holder-hor cats">
-		<li>
-			<%= link_to image_tag('/assets/cat-icons/burger-y.png'), :action => :refresh_clips, :remote => true, :uCat => 1, :uLevel => @uLevel %>
+		<li class='active'>
+			<%= link_to image_tag('/assets/cat-icons/burger-b.png'), :action => :refresh_clips, :remote => true, :uCat => 1, :uLevel => @uLevel %>
 		</li>
-		<li class="active">
-			<%= link_to image_tag('/assets/cat-icons/bus-b.png'), :action => :refresh_clips, :remote => true, :uCat => 2, :uLevel => @uLevel %>
+		<li>
+			<%= link_to image_tag('/assets/cat-icons/bus-y.png'), :action => :refresh_clips, :remote => true, :uCat => 2, :uLevel => @uLevel %>
 		</li>
 		<li>
 			<%= link_to image_tag('/assets/cat-icons/cart-y.png'), :action => :refresh_clips, :remote => true, :uCat => 3, :uLevel => @uLevel %>
